--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,10 @@
     <string name="there_is_no_data">there is no following or follower</string>
     <string name="bio">bio</string>
     <string name="scrollview">scrollView</string>
-<!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="settings">Settings</string>
+    <string name="favorite">Favorite</string>
+    <string name="dark_mod">Dark Mod</string>
+    <string name="tidak_ada_favorite">Tidak Ada Favorite</string>
+    <string name="favorite_button">Favorite Button</string>
 </resources>
