--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="_500_following">500 Following</string>
     <string name="tabLayout">tabLayout</string>
     <string name="detail_user">Detail</string>
+    <string name="favorite_user">Favorite User</string>
     <string name="tab_text1">Follower</string>
     <string name="tab_text2">Following</string>
     <string name="imageprofile">imageProfile</string>
@@ -25,9 +26,11 @@
     <string name="bio">bio</string>
     <string name="scrollview">scrollView</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="settings">Settings</string>
+    <string name="settings">Setting</string>
     <string name="favorite">Favorite</string>
-    <string name="dark_mod">Dark Mod</string>
+    <string name="dark_mode">Dark Mode</string>
     <string name="tidak_ada_favorite">Tidak Ada Favorite</string>
     <string name="favorite_button">Favorite Button</string>
+    <string name="delete_favorite">Delete Favorite</string>
+    <string name="github_user">Github User</string>
 </resources>
